AZ-QA-K8-Yaml-files/nginx-ingress/nginx-ingress_20June.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: optimus-ingress
  namespace: optimus-qa
  annotations:
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "1200"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1200"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1200"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "X-Frame-Options: Deny";
      more_set_headers "X-XSS-Protection: 1; mode=block";
      more_set_headers "Content-Security-Policy: default-src 'self' 'unsafe-inline' blob:;img-src 'self' data:";
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ui-service
            port:
              number: 80
